--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 #canvas1{
   position:absolute;
-  background:grey;
-  width:300px;
-  height:300px;
+  background:black;
+  width:100%
+  height:100%
   
 }
